# svelte-template

./: README.md  bun.lockb  components.json  jsconfig.json  package.json  package.json.addthis.json  vite.config.js.replacewiththis.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/lib/: Greet.svelte
src/lib/components/: datepicker.svelte  dialog.svelte  sidebar.svelte  sidebarButton.svelte  themeIcon.svelte  typing.svelte
src/lib/components/old/: sidebar.svelte  topbar.svelte
src/lib/components/ui/button/: button.svelte
src/lib/components/ui/calendar/: calendar-cell.svelte  calendar-day.svelte  calendar-grid-body.svelte  calendar-grid-head.svelte  calendar-grid-row.svelte  calendar-grid.svelte  calendar-head-cell.svelte  calendar-header.svelte  calendar-heading.svelte  calendar-months.svelte  calendar-next-button.svelte  calendar-prev-button.svelte  calendar.svelte  index.js
src/lib/components/ui/input/: input.svelte
src/lib/components/ui/skeleton/: skeleton.svelte
src/lib/components/ui/textarea/: textarea.svelte
src/lib/helper/: deepl.server.js  lang.js  supabaseClient.server.js
src/routes/: +layout.svelte  +page.svelte
src/routes/about/: +page.svelte
src/routes/settings/: +page.svelte
